--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,7 @@ temp/
 ### Node Patch ###
 # Serverless Webpack directories
 .webpack/
-
+.env
 # Optional stylelint cache
 
 # SvelteKit build / generate output
